Update 'dgqzte62p-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:f1089a2cef64531e80aaea6c916443618a3880c1@sha256:2bfc7f949ec19239588c9be63fe962bcff8014b333193649b8de286aa1851038

--- a/components/dgqzte62p-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/dgqzte62p-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dgqzte62p-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:f1089a2cef64531e80aaea6c916443618a3880c1@sha256:2bfc7f949ec19239588c9be63fe962bcff8014b333193649b8de286aa1851038
+          name: container-image
